# animefillerlist-api

./: README.md  mal_mapping.json  pyproject.toml  scrape_api_testing.py
app/: main.py  models.py  scrape.py
