[project]
name = "anime-filter-list-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
    "types-beautifulsoup4>=4.12.0.20250516",
]
